Serve 0.0.0.0, fix header z-index, add settings modal

--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -1,6 +1,7 @@
 .navbar {
   background-color: white !important;
   box-shadow: black;
+  z-index: 1050;
 }
 
 .navbar-nav > li {
